# -hakathone-physical-humanoid-robotic-book

./: .gitignore  README.md
.specify/memory/: constitution.md
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: auth_routes.py  chat_routes.py  deps.py  profile_routes.py
backend/src/core/: auth.py  database.py  vector_db.py
backend/src/models/: user.py
backend/src/services/: llm_service.py  rag_service.py
frontend/: docusaurus.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/docs/: 01-intro.md  03-module-2-ros2.mdx  04-module-3-simulation.mdx  05-module-4-vla-models.mdx  module-1.mdx
frontend/src/components/: AdaptiveContent.js  ChatWidget.js  NavbarToggle.js  ProfileForm.js
frontend/src/contexts/: UserContext.js
frontend/src/css/: custom.css
frontend/src/pages/: index.tsx  signup.js
frontend/src/theme/: Root.js
frontend/src/utils/: i18n.js
history/prompts/ai-textbook-platform/: 002-feature-spec-interactive-ai-textbook.spec.prompt.md  003-generate-tasks-for-interactive-ai-textbook.tasks.prompt.md  004-implement-interactive-ai-textbook-mvp.tasks.prompt.md  005-create-missing-index.module.css-file.green.prompt.md  006-replace-logo-with-robotic-logo.green.prompt.md  007-expand-content-for-modules-1-4.green.prompt.md  008-further-expansion-of-modules-1-4-with-deep-technical-details.green.prompt.md  009-expand-content-for-introduction-module.green.prompt.md
specs/001-ai-textbook-platform/: plan.md  spec.md  tasks.md
specs/001-ai-textbook-platform/checklists/: requirements.md
(+1 files in other folders)
